fix character form display in Dash; allow more collapse

--- a/src/app/SharedComponentModules/SharedForms/MakeCharacter/characterform/characterform.component.css
+++ b/src/app/SharedComponentModules/SharedForms/MakeCharacter/characterform/characterform.component.css
@@ -23,5 +23,9 @@ p {
 
 .SourceAbilityUnit {
     float: left;
+    display: block;
     width: 50%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
